# lakefs_catalog

./: .env.example  .gitignore  justfile  pyproject.toml  test_lakefs.py
api_spec/: python-codegen-config.yaml
lakefs_catalog/: __init__.py  lakefs_table.py  metadata.py
