[tool.poetry]
name = "lakefs-catalog"
version = "0.1.0"
description = ""
authors = ["Andreas Fred-Ojala <Andreasfo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyiceberg = {git = "https://github.com/apache/iceberg-python"}
pyarrow = "^15.0.0"
s3fs = ">=2023.1.0,<2024.1.0"
lakefs-sdk = {path = "api_spec/out/python"}
polars = {extras = ["pyiceberg"], version = "^0.20.7"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
